--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,24 +10,19 @@
 </nav>
 
 <main id="content">
-  <section class="wrapper wrapper--intro home-grid__intro-padding">
+  <section class="wrapper wrapper--intro home-grid__intro-padding home-grid__intro-bg">
     <div class="grid">
       <div class="home-grid__intro">
         <h1 class="heading heading--xlarge heading--tight">Study better with <b>plankr.</b></h1>
         <p>
           <span class="text-clipping">
-            Everyone runs into the same problems when studying.
-            Resources are spread all over the web, you research for the same stuff time and time again and have no idea where to start.
-            Luckily, Plankr solves it.
+            Everyone runs into the same problems when learning something new. Resources are spread all over the web, you search for the same things time and time again. Stuff is scattered all over the place and you have no idea where to start. Here's how Plankr solves it.
           </span>
         </p>
         
         <div class="home-grid__signup">
           <%= link_to 'Try now, sign up later', notes_path, class: 'button button_primary call-to-action' %>
         </div>
-      </div>
-      <div class="home-grid__graphic">
-        <%= image_tag('head-graphic.svg') %>
       </div>
       <hr class="sketch-rule grid__item grid__item--xlarge">
     </div>
