--- a/app/assets/stylesheets/welcome/index.scss
+++ b/app/assets/stylesheets/welcome/index.scss
@@ -133,7 +133,11 @@ body{
   display: grid;
   grid-template-columns: repeat(13, 1fr);
   .call-to-action{
-    grid-column: 3 / span 9;
+    grid-column: 1 / span 13;
+    
+    @media (min-width: 820px){
+      grid-column: 3 / span 9;
+    }
   }
 }
 
