--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,8 @@
   </head>
 
   <body>
-    <% if notice -%>
-      <span class="notice"><%= notice %></span>
+    <% if notice%>
+      <p class="notice"><%= notice %></p>
     <% end %>
     <div id="layout" class="content pure-g">
         <%= yield %>
