--- a/app/views/notes/_nav.html.erb
+++ b/app/views/notes/_nav.html.erb
@@ -19,14 +19,12 @@
     </div>
     
     <div class="nav-inner">
-      <% if current_person %>
-        <%= link_to 'Add a note', new_note_path, class: "primary-button pure-button" %>
-        <p>Logged in as <%= current_person.name %></p>
-        <%= link_to 'Log out', logout_path, method: "delete", class: "secondary-button pure-button" %>
-      <% else %>
-        <%= link_to 'Add a note', new_session_path, class: "primary-button pure-button" %>
-        <%= link_to 'Sign up', signup_path, class: "secondary-button pure-button" %>
-        <%= link_to 'Log in', login_path, class: "secondary-button pure-button" %>
-      <% end %>
+        <% if user_signed_in? %>
+          <%= link_to 'Add a note', new_note_path, class: "primary-button pure-button" %> 
+          <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: "secondary-button pure-button" %>
+        <% else %>
+          <%= link_to 'Add a note', new_user_session_path, class: "primary-button pure-button" %>   
+          <%= link_to 'Sign in', new_user_session_path, class: "secondary-button pure-button" %>
+        <% end %>
     </div>
 </div>
