Fix small screen nav bug

--- a/app/views/notes/_nav.html.erb
+++ b/app/views/notes/_nav.html.erb
@@ -13,7 +13,13 @@
       </a>
       <ul class="nav-list">
         <li class="nav-item">
-          <%= link_to 'Add a note', new_note_path, class: "primary-button pure-button" %>
+          <% if user_signed_in? %>
+            <%= link_to 'Sign out', destroy_user_session_path, method: :delete, class: "secondary-button pure-button" %>
+            <%= link_to 'Add a note', new_note_path, class: "primary-button pure-button" %> 
+          <% else %>
+            <%= link_to 'Sign in', new_user_session_path, class: "secondary-button pure-button" %>
+            <%= link_to 'Add a note', new_user_session_path, class: "primary-button pure-button" %>   
+          <% end %>
         </li>
       </ul>
     </div>
