--- a/app/views/notes/_list.html.erb
+++ b/app/views/notes/_list.html.erb
@@ -7,7 +7,7 @@
               <%= note.title %>
             </h5>
             <p class="note-desc">
-              <%= note.content.html_safe.truncate(100) %>
+              <%= strip_tags(note.content).truncate(100) %>
             </p>
         </div>
     </div>
