--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -13,10 +13,12 @@
       </div>
 
       <div class="note-content-controls pure-u-1-2">
-        <% if current_user.id == @note.user.id %>
-          <%= link_to 'Edit', edit_note_path(@note), class: "secondary-button pure-button" %>
-          <%= link_to 'Delete', @note, method: :delete, data: {confirm: "Are you sure?", remote: true}, 
-                                       class: "secondary-button pure-button" %>
+        <% if user_signed_in? %>
+          <% if note_belongs_to_current_user(@note) %>
+            <%= link_to 'Edit', edit_note_path(@note), class: "secondary-button pure-button" %>
+            <%= link_to 'Delete', @note, method: :delete, data: {confirm: "Are you sure?", remote: true}, 
+                                         class: "secondary-button pure-button" %>
+          <% end %>
         <% end %>
       </div>
   </div>
