--- a/app/views/notes/_list.html.erb
+++ b/app/views/notes/_list.html.erb
@@ -1,5 +1,5 @@
 <div id="list" class="pure-u-1">
-  <input id="userSearch" type="text" style="padding:0.5em;border:none;border-bottom: 1px solid #d9d9d9;width:95%;" autocomplete="off">
+  <input id="userSearch" type="text" style="padding:0.5em;border:none;border-bottom: 1px solid #d9d9d9;border-left: 1px solid #d9d9d9;width:95%;" autocomplete="off">
   
   <% @notes.each do |note|%>
     <%= link_to note_path(note) do %>
